--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>OpenArtemis Privacy Policy</title>
-   </head>
-   <body>
-      <div>
-      Privacy Policy for OpenArtemis
+<head>
+<title>Privacy Policy for OpenArtemis</title>
+</head>
+<body>
 
-Effective Date: March 16, 2023
+<h1>Privacy Policy for OpenArtemis</h1>
 
-This Privacy Policy describes the policies of OpenArtemis ("we," "us," or "our") regarding the collection, use, and disclosure of information about you in connection with your use of our app, OpenArtemis.
+<p>Effective Date: March 16, 2024</p>
 
-1. Information We Do Not Collect
+<p>This Privacy Policy describes the policies of OpenArtemis ("we," "us," or "our") regarding the collection, use, and disclosure of information about you in connection with your use of our app, OpenArtemis.</p>
 
-We value your privacy and are committed to protecting it. OpenArtemis does not collect, store, or transmit any personal information, data, or usage statistics. When you use OpenArtemis, you can be assured that your activities are private and not monitored by us.
+<h2>1. Information We Do Not Collect</h2>
+<p>We value your privacy and are committed to protecting it. OpenArtemis does not collect, store, or transmit any personal information, data, or usage statistics. When you use OpenArtemis, you can be assured that your activities are private and not monitored by us.</p>
 
-2. Third-Party Services
+<h2>2. Third-Party Services</h2>
+<p>Our app may contain links to third-party websites or services that are not owned or controlled by OpenArtemis. We have no control over, and assume no responsibility for, the content, privacy policies, or practices of any third-party websites or services. You acknowledge and agree that OpenArtemis shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods, or services available on or through any such websites or services.</p>
 
-Our app may contain links to third-party websites or services that are not owned or controlled by OpenArtemis. We have no control over, and assume no responsibility for, the content, privacy policies, or practices of any third-party websites or services. You acknowledge and agree that OpenArtemis shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods, or services available on or through any such websites or services.
+<h2>3. Limitation of Liability</h2>
+<p>OpenArtemis is provided "as is" without any warranty of any kind. To the maximum extent permitted by applicable law, we disclaim all liability for any harm, loss, or damage, including without limitation indirect, incidental, special, consequential, or punitive damages, arising out of or related to your use of or inability to use the app.</p>
 
-3. Limitation of Liability
+<h2>4. Changes to Our Privacy Policy</h2>
+<p>We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any changes by posting the new Privacy Policy on this page. Your continued use of OpenArtemis after any changes to this Privacy Policy will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.</p>
 
-OpenArtemis is provided "as is" without any warranty of any kind. To the maximum extent permitted by applicable law, we disclaim all liability for any harm, loss, or damage, including without limitation indirect, incidental, special, consequential, or punitive damages, arising out of or related to your use of or inability to use the app.
+<h2>5. Contact Us</h2>
+<p>If you have any questions about this Privacy Policy, please contact us via email at <a href="mailto:workrelatedactivity@gmail.com">workrelatedactivity@gmail.com</a>.</p>
 
-4. Changes to Our Privacy Policy
+<h2>6. Acknowledgment</h2>
+<p>By using OpenArtemis, you acknowledge that you have read and understood this Privacy Policy and agree to be bound by it.</p>
 
-We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any changes by posting the new Privacy Policy on this page. Your continued use of OpenArtemis after any changes to this Privacy Policy will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.
-
-5. Contact Us
-
-If you have any questions about this Privacy Policy, please contact us via email at workrelatedactivity@gmail.com.
-
-6. Acknowledgment
-
-By using OpenArtemis, you acknowledge that you have read and understood this Privacy Policy and agree to be bound by it.
-      </div>
-   </body>
+</body>
 </html>
