--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>We reserve the right to make changes to this Privacy Policy at any time. We will notify you of any changes by posting the new Privacy Policy on this page. Your continued use of OpenArtemis after any changes to this Privacy Policy will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.</p>
 
 <h2>5. Contact Us</h2>
-<p>If you have any questions about this Privacy Policy, please contact us via email at <a href="mailto:workrelatedactivity@gmail.com">workrelatedactivity@gmail.com</a>.</p>
+<p>If you have any questions about this Privacy Policy, please contact us via email at <a href="mailto:help@kepler.cafe">help@kepler.cafe</a>.</p>
 
 <h2>6. Acknowledgment</h2>
 <p>By using OpenArtemis, you acknowledge that you have read and understood this Privacy Policy and agree to be bound by it.</p>
