--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Privacy Policy for OpenArtemis</h1>
 
 <p>Effective Date: March 16, 2024</p>
+<p>Last Update: June 23, 2024 - updated contact information.</p>
 
 <p>This Privacy Policy describes the policies of OpenArtemis ("we," "us," or "our") regarding the collection, use, and disclosure of information about you in connection with your use of our app, OpenArtemis.</p>
 
